@@ -1,0 +1,11 @@
+# Copyright (c) 2024 Yuki Kimoto
+# MIT License
+
+class Net::SSLeay::Callback::RemoveSession : interface_t {
+  use Net::SSLeay;
+  use Net::SSLeay::SSL_CTX;
+  use Net::SSLeay::SSL_SESSION;
+  
+  required method : void ($ctx : Net::SSLeay::SSL_CTX, $session : Net::SSLeay::SSL_SESSION);
+  
+}
